fixed z-index of footer

--- a/components/footer/awesome-footer.css
+++ b/components/footer/awesome-footer.css
@@ -5,7 +5,7 @@ awesome-footer{
     display:block;
     padding:.5em 0;
     background:rgb(230,230,230);
-    z-index: 19900;
+    z-index: 2;
 }
 
 awesome-footer footer{
